force-app/main/default/objects/Opportunity/fields/Additional_Case_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Case_Details__c</fullName>
    <label>Additional Case Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>