force-app/main/default/objects/Opportunity/fields/Admission_ID__c.field-meta.xml
<CustomField>
    <fullName>Admission_ID__c</fullName>
    <description>Temp Admission ID</description>
    <label>Admission ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>