force-app/main/default/objects/Opportunity/fields/Admission_Picture1__c.field-meta.xml
<CustomField>
    <fullName>Admission_Picture1__c</fullName>
    <label>Admission Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>