force-app/main/default/objects/Opportunity/fields/Admission_Picture_old__c.field-meta.xml
<CustomField>
    <fullName>Admission_Picture_old__c</fullName>
    <label>Admission Picture old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>