force-app/main/default/objects/Opportunity/fields/Admitted__c.field-meta.xml
<CustomField>
    <fullName>Admitted__c</fullName>
    <label>Admitted</label>
    <type>Date</type>
</CustomField>