force-app/main/default/objects/Opportunity/fields/Admitted_Level_of_Care__c.field-meta.xml
<CustomField>
    <fullName>Admitted_Level_of_Care__c</fullName>
    <description>When patient admits to treatment, what level of care will they enter</description>
    <inlineHelpText>Level of Care that patient will admit to in EMR</inlineHelpText>
    <label>Admitted Level of Care</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Facility_Approved__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>DTX</fullName>
            </value>
            <value>
                <fullName>RTC</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>IOP</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>Transitional Living</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>