force-app/main/default/objects/Opportunity/fields/Admitted_Transitional_Living_Facility__c.field-meta.xml
<CustomField>
    <fullName>Admitted_Transitional_Living_Facility__c</fullName>
    <label>Admitted Transitional Living Facility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greenwood Houses</fullName>
            </value>
            <value>
                <fullName>Headwaters House</fullName>
            </value>
            <value>
                <fullName>Windhaven House</fullName>
            </value>
            <value>
                <fullName>MH Greenwood House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>