force-app/main/default/objects/Opportunity/fields/Admitted_Transitional_Living_Realm__c.field-meta.xml
<CustomField>
    <fullName>Admitted_Transitional_Living_Realm__c</fullName>
    <label>Admitted Transitional Living Realm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>West Palm Beach Transitional Living</fullName>
            </value>
            <value>
                <fullName>Dallas Transitional Living</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>