force-app/main/default/objects/Opportunity/fields/Alternate_Phone_No_1__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone_No_1__c</fullName>
    <label>Alternate Phone No #1</label>
    <type>Phone</type>
</CustomField>