force-app/main/default/objects/Opportunity/fields/Alternate_Phone_No_1_Abr__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone_No_1_Abr__c</fullName>
    <formula>IF(LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Alternate_Phone_No_1X__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+1&quot;, &quot;&quot;),1)=&quot;1&quot;,RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Alternate_Phone_No_1X__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+1&quot;, &quot;&quot;),LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Alternate_Phone_No_1X__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+1&quot;, &quot;&quot;))-1),SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Alternate_Phone_No_1X__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+1&quot;, &quot;&quot;))</formula>
    <label>Alternate Phone No 1 Abr</label>
    <type>Text</type>
</CustomField>