force-app/main/default/objects/Opportunity/fields/Alumni_s_Original_Referent__c.field-meta.xml
<CustomField>
    <fullName>Alumni_s_Original_Referent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumni’s Original Referent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Alumni’s Original Referent)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>