force-app/main/default/objects/Opportunity/fields/Anticipated_Realm__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Realm__c</fullName>
    <label>Admitted Treatment Realm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Origins Behavioral HealthCare of Florida, LLC</fullName>
            </value>
            <value>
                <fullName>Origins Recovery of Texas, LLC</fullName>
            </value>
            <value>
                <fullName>Origins Counseling, LLC</fullName>
            </value>
            <value>
                <fullName>Origins Counseling Mental Health Services</fullName>
            </value>
            <value>
                <fullName>Origins Behavioral Healthcare of Florida</fullName>
            </value>
            <value>
                <fullName>Origins Recovery of Texas</fullName>
            </value>
            <value>
                <fullName>Origins Counseling Dallas</fullName>
            </value>
            <value>
                <fullName>Origins West Palm Beach Transitional Living</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>