force-app/main/default/objects/Opportunity/fields/Assigned_PRO_Logged_in__c.field-meta.xml
<CustomField>
    <fullName>Assigned_PRO_Logged_in__c</fullName>
    <formula>If( Assigned_Proteam__c = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned PRO Logged In</label>
    <type>Checkbox</type>
</CustomField>