force-app/main/default/objects/Opportunity/fields/Caller_PhoneX__c.field-meta.xml
<CustomField>
    <fullName>Caller_PhoneX__c</fullName>
    <description>Used by Origins</description>
    <label>Caller Phone</label>
    <type>Phone</type>
</CustomField>