force-app/main/default/objects/Opportunity/fields/Caller_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Preferred_Name__c</fullName>
    <label>Caller Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>