force-app/main/default/objects/Opportunity/fields/Caller_Preferred_No__c.field-meta.xml
<CustomField>
    <fullName>Caller_Preferred_No__c</fullName>
    <label>Caller Preferred No</label>
    <type>Phone</type>
</CustomField>