force-app/main/default/objects/Opportunity/fields/Caller_Preferred_Type__c.field-meta.xml
<CustomField>
    <fullName>Caller_Preferred_Type__c</fullName>
    <label>Caller Preferred Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cell</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>