force-app/main/default/objects/Opportunity/fields/Caller_Relationshipship_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Caller_Relationshipship_to_Client__c</fullName>
    <label>Caller Relationship to Patient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EAP</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Healthcare Professionals</fullName>
            </value>
            <value>
                <fullName>Legal Organization</fullName>
            </value>
            <value>
                <fullName>OBH Employee</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>PRO</fullName>
            </value>
            <value>
                <fullName>Referent</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Treatment Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>