force-app/main/default/objects/Opportunity/fields/Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Case_Description__c</fullName>
    <label>Case Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>