force-app/main/default/objects/Opportunity/fields/Case_Safe_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Opportunity_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Opportunity Id</label>
    <type>Text</type>
</CustomField>