force-app/main/default/objects/Opportunity/fields/Change_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Change_Country_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Country Code</label>
    <type>Checkbox</type>
</CustomField>