force-app/main/default/objects/Opportunity/fields/Client_DOB__c.field-meta.xml
<CustomField>
    <fullName>Client_DOB__c</fullName>
    <inlineHelpText>You can&apos;t edit the patient’s &quot;Date of Birth&quot; on Opportunity. Please make changes on the Account.</inlineHelpText>
    <label>Patient DOB</label>
    <type>Date</type>
</CustomField>