force-app/main/default/objects/Opportunity/fields/Client_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Middle_Name__c</fullName>
    <inlineHelpText>You can&apos;t edit the patient’s &quot;Name&quot; on Opportunity. Please make changes on the Account.</inlineHelpText>
    <label>Patient Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>