force-app/main/default/objects/Opportunity/fields/clonedRecord__c.field-meta.xml
<CustomField>
    <fullName>clonedRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>clonedRecord?</label>
    <type>Checkbox</type>
</CustomField>