force-app/main/default/objects/Opportunity/fields/Current_Length_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Current_Length_of_Stay__c</fullName>
    <formula>IF(ISPICKVAL(StageName, &quot;Admitted&quot;), (TODAY() - Admitted_Date__c),  (Discharge_Date__c - Admitted_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Length of Stay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>