force-app/main/default/objects/Opportunity/fields/Days1__c.field-meta.xml
<CustomField>
    <fullName>Days1__c</fullName>
    <formula>if(AND(Is_Deceased__c =True,(NOW()-  Account.Is_Deceased_Date__c )*10000&gt;1),
( NOW()-Account.Is_Deceased_Date__c)*10000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>