force-app/main/default/objects/Opportunity/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>(NOW()-CreatedDate)*10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>