force-app/main/default/objects/Opportunity/fields/Days_Attended__c.field-meta.xml
<CustomField>
    <fullName>Days_Attended__c</fullName>
    <label>Days Attended</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day 1</fullName>
            </value>
            <value>
                <fullName>Day 2</fullName>
            </value>
            <value>
                <fullName>Day 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>