force-app/main/default/objects/Opportunity/fields/DC_Date__c.field-meta.xml
<CustomField>
    <fullName>DC_Date__c</fullName>
    <label>Discharge Date1</label>
    <type>Date</type>
</CustomField>