force-app/main/default/objects/Opportunity/fields/DialogTech_Phone_Label__c.field-meta.xml
<CustomField>
    <fullName>DialogTech_Phone_Label__c</fullName>
    <label>DialogTech Phone Label</label>
    <type>TextArea</type>
</CustomField>