force-app/main/default/objects/Opportunity/fields/Discharge_Picture__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Picture__c</fullName>
    <label>Discharge Picture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>