force-app/main/default/objects/Opportunity/fields/Discharge_Status__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Status__c</fullName>
    <label>Discharge Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful Program Completion</fullName>
            </value>
            <value>
                <fullName>Transfer Discharge</fullName>
            </value>
            <value>
                <fullName>Medical/Legal/Safety (MLS)</fullName>
            </value>
            <value>
                <fullName>Against Staff Advice (ASA)</fullName>
            </value>
            <value>
                <fullName>Completed Episode of Care</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Leave of Absence (LOA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>