force-app/main/default/objects/Opportunity/fields/Discharged_Hanley_Center_Program__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Hanley_Center_Program__c</fullName>
    <label>Discharged Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Casa Flores</fullName>
            </value>
            <value>
                <fullName>Center for Men&apos;s Recovery</fullName>
            </value>
            <value>
                <fullName>Center for Women&apos;s Recovery</fullName>
            </value>
            <value>
                <fullName>Center for Older Adult Recovery</fullName>
            </value>
            <value>
                <fullName>Referred Stabilization</fullName>
            </value>
            <value>
                <fullName>Chemical Dependency Assessment</fullName>
            </value>
            <value>
                <fullName>No Program</fullName>
            </value>
            <value>
                <fullName>DNCH</fullName>
            </value>
            <value>
                <fullName>Day/Night</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Discover Assessments - Comprehensive</fullName>
            </value>
            <value>
                <fullName>Discover Assessments - Basic</fullName>
            </value>
            <value>
                <fullName>Discover Assessments - Standard</fullName>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
            </value>
            <value>
                <fullName>Referred Stabilization - RMH</fullName>
            </value>
            <value>
                <fullName>Referred Stabilization - TTBH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>