force-app/main/default/objects/Opportunity/fields/Discharged_Level_of_Care__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Level_of_Care__c</fullName>
    <label>Discharged Level of Care</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Discharged_Treatment_Service_Facility__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>DTX</fullName>
            </value>
            <value>
                <fullName>RTC</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>IOP</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>