force-app/main/default/objects/Opportunity/fields/Discharged_Treatment_Service_Facility__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Treatment_Service_Facility__c</fullName>
    <label>Discharged Treatment Service Facility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hanley Center</fullName>
            </value>
            <value>
                <fullName>Hanley Center Counseling</fullName>
            </value>
            <value>
                <fullName>Hanley Center - Mental Health</fullName>
            </value>
            <value>
                <fullName>Hanley Center - Mental Health Outpatient</fullName>
            </value>
            <value>
                <fullName>HeadWaters</fullName>
            </value>
            <value>
                <fullName>Hannah&apos;s House</fullName>
            </value>
            <value>
                <fullName>Origins Counseling</fullName>
            </value>
            <value>
                <fullName>Origins Counseling - Mental Health</fullName>
            </value>
            <value>
                <fullName>Origins Recovery Center</fullName>
            </value>
            <value>
                <fullName>Origins Recovery of Texas Counseling</fullName>
            </value>
            <value>
                <fullName>Origins Counseling - Harlingen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>