force-app/main/default/objects/Opportunity/fields/Do_Not_Readmit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Readmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Readmit</label>
    <type>Checkbox</type>
</CustomField>